// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Spinner Esempio 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col-6 col-lg-3"
      >
        <p
          class="mb-3"
        >
          <strong>
            Spinner standard
          </strong>
        </p>
        <span
          class="progress-spinner"
        >
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
      <div
        class="col-6 col-lg-3"
      >
        <p
          class="mb-3"
        >
          <strong>
            Spinner Attivo
          </strong>
        </p>
        <span
          class="progress-spinner progress-spinner-active"
        >
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
      <div
        class="col-6 col-lg-3 mt-3 mt-lg-0"
      >
        <p
          class="mb-3"
        >
          <strong>
            Small
          </strong>
        </p>
        <span
          class="progress-spinner size-sm"
        >
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
      <div
        class="col-6 col-lg-3 mt-3 mt-lg-0"
      >
        <p
          class="mb-3"
        >
          <strong>
            Small attivo
          </strong>
        </p>
        <span
          class="progress-spinner progress-spinner-active size-sm"
        >
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Spinner SpinnerDoppio 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col-6 col-lg-3"
      >
        <p
          class="mb-3"
        >
          <strong>
            Spinner doppio
          </strong>
        </p>
        <span
          class="progress-spinner progress-spinner-double"
        >
          <div
            class="progress-spinner-inner"
          />
          <div
            class="progress-spinner-inner"
          />
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
      <div
        class="col-6 col-lg-3"
      >
        <p
          class="mb-3"
        >
          <strong>
            Doppio attivo
          </strong>
        </p>
        <span
          class="progress-spinner progress-spinner-active progress-spinner-double"
        >
          <div
            class="progress-spinner-inner"
          />
          <div
            class="progress-spinner-inner"
          />
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
      <div
        class="col-6 col-lg-3 mt-3 mt-lg-0"
      >
        <p
          class="mb-3"
        >
          <strong>
            Doppio small
          </strong>
        </p>
        <span
          class="progress-spinner size-sm progress-spinner-double"
        >
          <div
            class="progress-spinner-inner"
          />
          <div
            class="progress-spinner-inner"
          />
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
      <div
        class="col-6 col-lg-3 mt-3 mt-lg-0"
      >
        <p
          class="mb-3"
        >
          <strong>
            Doppio small attivo
          </strong>
        </p>
        <span
          class="progress-spinner progress-spinner-active size-sm progress-spinner-double"
        >
          <div
            class="progress-spinner-inner"
          />
          <div
            class="progress-spinner-inner"
          />
          <span
            class="visually-hidden"
          >
            Caricamento
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
